--- a/vagrant.yml
+++ b/vagrant.yml
@@ -3,5 +3,5 @@ folder:
     local: /var/www/strongloop
     server: /var/www/strongloop
 ip: 
-    local: 192.168.33.20
-domain: alphaloop.meomeo
+    local: 192.168.33.01
+domain: strongloop.demo
